--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<script>
-window.location.href='http://www.downloadtailieu.tk'
-</script>
+<link rel="canonical" href="http://www.downloadtailieu.tk"/>
+<meta http-equiv="refresh" content="0; url=http://downloadtailieu.tk" />
