--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <link rel="canonical" href="http://www.downloadtailieu.tk"/>
-<meta http-equiv="refresh" content="0; url=http://downloadtailieu.tk" />
+<meta http-equiv="refresh" content="0; url=http://www.downloadtailieu.tk" />
