--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<link rel="canonical" href="http://www.downloadtailieu.tk"/>
-<meta http-equiv="refresh" content="0; url=http://www.downloadtailieu.tk" />
+<!DOCTYPE html>
+<html lang=vi>
+ <head>
+    <link rel="canonical" href="http://www.downloadtailieu.tk"/>
+    <meta http-equiv="refresh" content="0; url=http://www.downloadtailieu.tk"/>
+    <meta http-equiv=Content-Type content="text/html; charset=UTF-8">
+    <title>Tải Tài Liệu Miễn Phí Từ TaiLieu.Vn - DOWNLOADTAILIEU.TK</title>
+    <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <meta name=description content="Bạn muốn tải file Tài liệu mà không có tài khoản VIP ? Đừng lo lắng, đã có Download Tailieu giúp bạn ! Getlink,get link tailieu, get link tailieu.vn, get link tailieu vn, download tailieu, download tailieu.vn">
+    <meta name=keywords content="Getlink,get link tailieu, get link tailieu.vn, get link tailieu vn, download tailieu, download tailieu.vn">
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta itemprop=name content="Bạn muốn tải tài liệu gì?">
+    <meta itemprop=description content="Bạn muốn tải file Tài liệu mà không có tài khoản VIP ? Đừng lo lắng, đã có Download Tailieu giúp bạn ! Getlink,get link tailieu, get link tailieu.vn, get link tailieu vn, download tailieu, download tailieu.vn">
+    <meta itemprop=image content=https://i.imgur.com/U72TJrf.png>
+    <link rel="shortcut icon" type=image/png href=/static/favicon.png>
+ </head>
